--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
 db-uri = "postgres://godot_vrxy_user:TU_CONTRASEÑA@dp.../godot_vrxy"
 db-schema = "public"
 db-anon-role = "web_anon"
-server-port = ${PORT}
+server-port = 3000
