--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgres://godot_vrxy_user:TU_CONTRASEÑA@dp.../godot_vrxy"
+db-uri = "postgres://godot_vx1y_user:iuYzhjZKNdX1VDB1YjeIKbVVZfSLODP6@dpg-d1lvt32dbo4c73aee660-a/godot_vx1y"
 db-schema = "public"
 db-anon-role = "web_anon"
-server-port = 3000
+server-port = 10000
