--- a/postgrest.conf
+++ b/postgrest.conf
@@ -2,3 +2,5 @@ db-uri = "postgres://godot_vx1y_user:iuYzhjZKNdX1VDB1YjeIKbVVZfSLODP6@dpg-d1lvt3
 db-schema = "public"
 db-anon-role = "web_anon"
 server-port = 10000
+server-host = "!4"
+server-cors = true
